# API-scada-TML

./: .dockerignore  .env.example  .gitignore  API.md  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  INSTALLATION.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  REPOSITORY_INIT.md  SECURITY.md  TROUBLESHOOTING.md  app.py  docker-compose.dev.yml  pyproject.toml  requirements.txt  run.cmd
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
StatusProject/: .gitignore  ARCHITECTURE.md  DEVELOPMENT-STATUS.md  INFRASTRUCTURE.md  LINKS.md  MEMORY.md  PLAN.md  PROJECT-RESUME.md  PROJECT-TREE.md  SOFTWARE.md  SOURCE.md  STATUS-LOG.md  TESTING.md  TODO.md
