[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-scada-tml"
version = "0.2.0"
description = "Read-only HTTP API for OWEN TML / Telemechanika Lite with Docker deployment support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HSPhub.com"}
]
keywords = ["SCADA", "TML", "API", "OWEN", "read-only"]

dependencies = [
    "flask>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyodbc>=4.0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/NohchiyBors/API-scada-TML"
Documentation = "https://github.com/NohchiyBors/API-scada-TML#readme"
Repository = "https://github.com/NohchiyBors/API-scada-TML.git"
"Bug Tracker" = "https://github.com/NohchiyBors/API-scada-TML/issues"

[tool.setuptools]
py-modules = ["app"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
